Fixed some typo error

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <div class="aqi-prediction">
 
                 <h2 class="aqi-title">Air Quality</h2>
-                <p>Main pollutan : PM 2.5</p>
+                <p>Main pollutant : PM 2.5</p>
                 <div class="current-aqi">
                     <div class="aqi-level">
                         <div class="aqi">390</div>
@@ -386,7 +386,7 @@
 
     <!--|| FOOTER -->
     <footer>
-        <div class="copyright">Copyrights <span id="copyright">2023</span> @Soni_Kumari All Rights Reserved.</div>
+        <div class="copyright"><span style="font-size: 16px;">&copy;</span> Copyrights <span id="copyright">2023</span></div>
     </footer>
 
     <script src="main.js"></script>
