Changed Copyright section

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 
     <!--|| FOOTER -->
     <footer>
-        <div class="copyright"><span style="font-size: 16px;">&copy;</span> Copyrights <span id="copyright">2023</span></div>
+        <div class="copyright">Copyrights <span style="font-size: 16px;">&copy;</span> <span id="copyright">2023</span></div>
     </footer>
 
     <script src="main.js"></script>
