3 days weather forecast

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
             <!-- || Next 6 Days Weather report -->
             <div class="weather-prediction">
-                <h3>6 Days Forecast</h3>
+                <h3>3 Days Forecast</h3>
 
                 <div class="days-box">
                     <div>
@@ -340,7 +340,8 @@
                     <div class="days-temp">26°c <span>/</span> 19°c</div>
                 </div>
 
-                <div class="days-box">
+            
+                <!-- <div class="days-box">
                     <div>
                         <img class="days-icon" src="images/clouds.png" alt="">
                         <div class="days">
@@ -377,7 +378,7 @@
                     </div>
 
                     <div class="days-temp">26°c <span>/</span> 19°c</div>
-                </div>
+                </div> -->
 
             </div>
 
